<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.akkc.tensor</groupId>
    <artifactId>data-plane</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <spring-boot.version>3.5.16</spring-boot.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.5.6</maven-failsafe-plugin.version>
        <junit-jupiter.version>5.12.2</junit-jupiter.version>
        <assertj.version>3.27.7</assertj.version>
        <mockito.version>5.17.0</mockito.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <wiremock.version>3.13.2</wiremock.version>
        <archunit.version>1.5.0</archunit.version>
        <json-schema-validator.version>1.5.9</json-schema-validator.version>
        <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.akkc.tensor</groupId>
                <artifactId>tensor-plugin-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.akkc.tensor</groupId>
                <artifactId>tensor-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.akkc.tensor</groupId>
                <artifactId>tensor-plugin-tushare</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.akkc.tensor</groupId>
                <artifactId>tensor-plugin-fixture</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>json-schema-validator</artifactId>
                <version>${json-schema-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-standalone</artifactId>
                <version>${wiremock.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>ban-git-capabilities</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <fail>true</fail>
                            <rules>
                                <bannedDependencies>
                                    <searchTransitive>true</searchTransitive>
                                    <excludes>
                                        <exclude>org.eclipse.jgit:*</exclude>
                                        <exclude>org.kohsuke:github-api</exclude>
                                        <exclude>org.gitlab4j:gitlab4j-api</exclude>
                                        <exclude>com.cdancy:bitbucket-rest</exclude>
                                        <exclude>io.github.cdancy:bitbucket-rest</exclude>
                                        <exclude>com.atlassian.bitbucket:*</exclude>
                                        <exclude>com.atlassian.bitbucket.server:*</exclude>
                                    </excludes>
                                    <message>Git and code-hosting API dependencies are forbidden in Tensor</message>
                                </bannedDependencies>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>tensor-plugin-api</module>
        <module>tensor-core</module>
        <module>tensor-plugin-tushare</module>
        <module>tensor-plugin-fixture</module>
        <module>tensor-app</module>
    </modules>

</project>
